# cirrus-rt

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: BasicTriangle.h  CirrusApp.h  CirrusValidation.h  Volume.h  Window.h
shader/: shader.cfg
shaders/: triangle_shader.cfg  triangle_shader.hlsl
src/: BasicTriangle.cpp  CirrusApp.cpp  Volume.cpp  Window.cpp  main.cpp
